[gd_scene load_steps=27 format=3 uid="uid://6vnkimp2qfyb"]

[ext_resource type="Script" uid="uid://bc0cvjxuxmwp4" path="res://scripts/enemies/skeleton.gd" id="1_eju56"]
[ext_resource type="Resource" uid="uid://duqgduy5fwj3c" path="res://assets/resources/loot_tables/skeleton.tres" id="2_j63m2"]
[ext_resource type="Texture2D" uid="uid://b7odi5umsxbkk" path="res://assets/sprites/enemies/angry_villager/angry_villager.png" id="3_8miv1"]
[ext_resource type="AudioStream" uid="uid://ceoio15wnxqhn" path="res://assets/audio/effects/skeleton/rattling-bones-105394.mp3" id="9_d70y8"]
[ext_resource type="AudioStream" uid="uid://c60oxhfgugsd1" path="res://assets/audio/effects/skeleton/bone-break-sound-269658.mp3" id="10_h7occ"]
[ext_resource type="AudioStream" uid="uid://dh0bftdlksrim" path="res://assets/audio/effects/skeleton/falling-bones-87568.mp3" id="11_sg1l6"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_s0h66"]
height = 22.0

[sub_resource type="AtlasTexture" id="AtlasTexture_8miv1"]
atlas = ExtResource("3_8miv1")
region = Rect2(912, 561, 152, 187)

[sub_resource type="AtlasTexture" id="AtlasTexture_uj3q6"]
atlas = ExtResource("3_8miv1")
region = Rect2(1064, 561, 152, 187)

[sub_resource type="AtlasTexture" id="AtlasTexture_d08oh"]
atlas = ExtResource("3_8miv1")
region = Rect2(1216, 561, 152, 187)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7keb"]
atlas = ExtResource("3_8miv1")
region = Rect2(0, 561, 117, 187)

[sub_resource type="AtlasTexture" id="AtlasTexture_3duyb"]
atlas = ExtResource("3_8miv1")
region = Rect2(234, 561, 117, 187)

[sub_resource type="AtlasTexture" id="AtlasTexture_eju56"]
atlas = ExtResource("3_8miv1")
region = Rect2(351, 561, 117, 187)

[sub_resource type="AtlasTexture" id="AtlasTexture_j63m2"]
atlas = ExtResource("3_8miv1")
region = Rect2(117, 561, 117, 187)

[sub_resource type="AtlasTexture" id="AtlasTexture_sj26p"]
atlas = ExtResource("3_8miv1")
region = Rect2(600, 0, 120, 179)

[sub_resource type="AtlasTexture" id="AtlasTexture_71vwd"]
atlas = ExtResource("3_8miv1")
region = Rect2(351, 0, 117, 179)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdbp7"]
atlas = ExtResource("3_8miv1")
region = Rect2(0, 0, 117, 179)

[sub_resource type="AtlasTexture" id="AtlasTexture_rj6qm"]
atlas = ExtResource("3_8miv1")
region = Rect2(0, 0, 117, 179)

[sub_resource type="AtlasTexture" id="AtlasTexture_k0pqu"]
atlas = ExtResource("3_8miv1")
region = Rect2(117, 0, 117, 179)

[sub_resource type="AtlasTexture" id="AtlasTexture_mof2o"]
atlas = ExtResource("3_8miv1")
region = Rect2(234, 0, 117, 179)

[sub_resource type="AtlasTexture" id="AtlasTexture_d70y8"]
atlas = ExtResource("3_8miv1")
region = Rect2(351, 0, 117, 179)

[sub_resource type="SpriteFrames" id="SpriteFrames_umco3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8miv1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uj3q6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d08oh")
}],
"loop": false,
"name": &"attack1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7keb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3duyb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eju56")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j63m2")
}],
"loop": false,
"name": &"attack2",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sj26p")
}],
"loop": false,
"name": &"die",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_71vwd")
}],
"loop": false,
"name": &"hurt",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdbp7")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rj6qm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k0pqu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mof2o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d70y8")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_6ucyf"]
radius = 300.0

[sub_resource type="CircleShape2D" id="CircleShape2D_vncds"]
radius = 50.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2t5sy"]
bg_color = Color(0, 0, 0, 0.18431373)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pxfki"]
bg_color = Color(0.75686276, 0, 0.09411765, 1)

[node name="Skeleton" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 4
collision_mask = 5
motion_mode = 1
script = ExtResource("1_eju56")
detect_radius = 350
speed = 165
attack_cooldown = 0.7
crit_chance = 0.15
attack_damage = 15
xp_reward = 80
loot_table = ExtResource("2_j63m2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -22)
shape = SubResource("CapsuleShape2D_s0h66")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -1)
sprite_frames = SubResource("SpriteFrames_umco3")
animation = &"attack1"
frame = 2
frame_progress = 1.0
offset = Vector2(2.465, -31.195)

[node name="DetectionArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(0, -25)
shape = SubResource("CircleShape2D_6ucyf")

[node name="AttackRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
position = Vector2(0, -24.285)
shape = SubResource("CircleShape2D_vncds")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 4.0
path_max_distance = 10.0
simplify_path = true

[node name="sfxWalk" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_d70y8")

[node name="sfxHurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_h7occ")

[node name="sfxDie" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_sg1l6")

[node name="HpBar" type="ProgressBar" parent="."]
offset_left = -27.0
offset_top = -58.0
offset_right = 27.0
offset_bottom = -52.0
theme_override_styles/background = SubResource("StyleBoxFlat_2t5sy")
theme_override_styles/fill = SubResource("StyleBoxFlat_pxfki")
value = 50.0
show_percentage = false

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_frame_changed"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
[connection signal="body_entered" from="AttackRange" to="." method="_on_AttackRange_body_entered"]
